Add final functionalities